Rechecking conclusions and submitted to turnitin for the first time

--- a/main.tex
+++ b/main.tex
@@ -1014,10 +1014,10 @@ I hereby confirm the following:
 \item I hereby grant SUTD the permission to reproduce and distribute publicly paper and electronic copies of this thesis document in whole or in part in any medium now known or hereafter created in accordance with Policy on Intellectual Property, clause 4.2.2.
 \item I have fulfilled all requirements as prescribed by the University and provided 1 copy of my thesis in PDF.
 \item I have attached all publications and award list related to the thesis (e.g. journal, conference report and patent).
-\item The thesis does / does not (delete accordingly) contain patentable or confidential information.
-\item I certify that the thesis has been checked for plagiarism via turnitin/ithenticate. The score is 100\%.
+\item The thesis does not contain patentable or confidential information.
+\item I certify that the thesis has been checked for plagiarism via turnitin/ithenticate. The score is 8\% (excluding the sources listed as publications on page iv).
 \end{itemize}
-
+\vspace{0.5cm}
 \noindent Name and signature:\\
 \rule[0.5em]{25em}{0.5pt} % This prints a line for the signature
 
@@ -1077,16 +1077,16 @@ Rothstein-Morris E., Castellanos J.H., Ochoa M. and Chattopadhyay S. (2021). Imp
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-\todo[inline]{I have so many people to thank...I should start writing this.}
-It seems strange to think that almost five years have already passed since I arrived in Singapore. 
+\todo[inline]{I'm still writing this :-)}
+% It seems strange to think that almost five years have already passed since I arrived in Singapore. 
 
-I would first like to thank my family. My mother, my father and my brother...
+% I would first like to thank my family. My mother, my father and my brother...
 
-Next, I would like to thank my supervisors Mart\'in Ochoa, Sun Jun, and Sudipta Chattopadhyay. I've had the pleasure to work with each of you, learn from you, and experience through you the world of academia. I thank you for the time and lessons you've given me to make this journey a success. 
+% Next, I would like to thank my supervisors Mart\'in Ochoa, Sun Jun, and Sudipta Chattopadhyay. I've had the pleasure to work with each of you, learn from you, and experience through you the world of academia. I thank you for the time and lessons you've given me to make this journey a success. 
 
-I want to especially thank Jorge Cuellar. Jorge, your passion for teaching and research was what ultimately inspired me to pursue a PhD. I am very grateful for those hours we spent together going over parts of this thesis to make it sensible and sober. I still have so much to learn! 
+% I want to especially thank Jorge Cuellar. Jorge, your passion for teaching and research was what ultimately inspired me to pursue a PhD. I am very grateful for those hours we spent together going over parts of this thesis to make it sensible and sober. I still have so much to learn! 
 
-The Passau team taught me valuable lessons in life.
+% The Passau team taught me valuable lessons in life.
 
 
 
@@ -1200,12 +1200,12 @@ Thank you Maria Fernanda García, dear Mafe, for always checking on me! Your mes
 %	THESIS CONTENT - APPENDICES
 %----------------------------------------------------------------------------------------
 
-\appendix % Cue to tell LaTeX that the following "chapters" are Appendices
+%\appendix % Cue to tell LaTeX that the following "chapters" are Appendices
 
 % Include the appendices of the thesis as separate files from the Appendices folder
 % Uncomment the lines as you write the Appendices
 
-\include{Appendices/AppendixA}
+%\include{Appendices/AppendixA}
 %\include{Appendices/AppendixB}
 %\include{Appendices/AppendixC}
  
