Ok I think I've addressed all of Sudipta's comments. Hopefully we can submit soon

--- a/EGRM.bib
+++ b/EGRM.bib
@@ -3582,6 +3582,13 @@ abstract="We define a propositional version of the $\Mu$-calculus, and give an e
 isbn="978-3-540-39308-5"
 }
 
+@phdthesis{CEGIS,
+	Author = {Solar-Lezama, Armando},
+	School = {University of California, Berkeley},
+	Title = {{Program synthesis by sketching}},
+	Url = {https://people.csail.mit.edu/asolar/papers/thesis.pdf},
+	Year = {2008}}
+
 
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
