--- a/main.tex
+++ b/main.tex
@@ -979,7 +979,7 @@ Thesis Advisor\\[0.25cm]%[0.75cm]
 \begin{tec}
 \addchaptertocentry{\tecname}
 \begin{tabular}{ll}
-	TEC Chair: & Prof. Jianying Zhou \\
+	TEC Chair: & Prof. ZHOU Jianying \\
 	Main Advisor: & Prof. Sudipta Chattopadhyay \\
 	%Co-advisor(s): & Prof. XXXX (if any) \\
 	Internal TEC member 1: & Prof. CHEN Binbin\\
@@ -1068,7 +1068,7 @@ Rothstein-Morris E., Sun J. and Chattopadhyay S. (2020) Systematic Classificatio
 
 Rothstein-Morris E., Sun J., Chattopadhyay S. (2021) ORIGAMI: Folding Data Structures to Reduce Timing Side-Channel Leakage. Submitted to the 35th IEEE Computer Security Foundations Symposium. CSF 2022. 
 
-Rothstein-Morris E., Castellanos J.H., Ochoa M. and Chattopadhyay S. (2021). Improving the Robustness of Cyber-Physical System Models via Latent Behaviour Analysis and Testing. Submitted to the ACM Transactions on Privacy and Security. 
+Rothstein-Morris E., Castellanos J.H., Ochoa M. and Chattopadhyay S. (2021). Improving the Robustness of Cyber-Physical System Models via Latent Behaviour Analysis and Testing. To be submitted to the ACM Transactions on Privacy and Security. ACM TOPS.
 \end{publications}
 
 %----------------------------------------------------------------------------------------
@@ -1077,24 +1077,35 @@ Rothstein-Morris E., Castellanos J.H., Ochoa M. and Chattopadhyay S. (2021). Imp
 
 \begin{acknowledgements}
 \addchaptertocentry{\acknowledgementname} % Add the acknowledgements to the table of contents
-\todo[inline]{I'm still writing this :-)}
+My family --especially my mother, my father and my brother-- have been and still are the fundamental pillars of my life. I love you and I am incredibly happy to share this achievement with you. Although we are half a world apart, you are always in my heart. I hope to see you all very soon!
+
+I had the wonderful and unique experience of working with three different advisors:  Mart\'in Ochoa, Sun Jun, and Sudipta Chattopadhyay. I've learn a lot from each of you, and for that I am grateful. I thank you for the time and lessons you've given me to make this journey successful.
+
+I want to especially thank Jorge Cuellar. Jorge, your passion for teaching and research was what ultimately inspired me to pursue a PhD. I am very grateful for those hours we spent together going over parts of this thesis to make it sensible and sober. I still have so much to learn! Vielen Dank!
+
+I am fortunate to have friends all over the world! My friends in Singapore have been my family during these five years. Caro, John, Juancho, Andr\'es, I I hope you know that you'll find a friend in me, one you can always count on. Muchas gracias por todo!
+
+Carlos and Laura Murguia. I hope to 
+
+Thank you Maria Fernanda García, dear Mafe, for always checking on me! Your messages always bring joy and a smile to my face, and they keep me motivated. I'm very grateful to be your friend :) 
+
+Finally, I would like to thank my thesis committee for the taking the time to read and evaluate the results of my work. The academic reviewing process is, unfortunately, often unappreciated. I you to know that I am truly grateful for your comments and suggestions.
+
+It makes me happy to know that I've been surrounded by wonderful peers, friends, and family all this time. What a lovely, lovely, feeling it is, truly. 
+\begin{flushright}
+	Thank you all.\\
+	Eric G. Rothstein-Morris
+\end{flushright}
 % It seems strange to think that almost five years have already passed since I arrived in Singapore. 
 
 % I would first like to thank my family. My mother, my father and my brother...
 
-% Next, I would like to thank my supervisors Mart\'in Ochoa, Sun Jun, and Sudipta Chattopadhyay. I've had the pleasure to work with each of you, learn from you, and experience through you the world of academia. I thank you for the time and lessons you've given me to make this journey a success. 
+% Next, 
 
-% I want to especially thank Jorge Cuellar. Jorge, your passion for teaching and research was what ultimately inspired me to pursue a PhD. I am very grateful for those hours we spent together going over parts of this thesis to make it sensible and sober. I still have so much to learn! 
+% 
 
 % The Passau team taught me valuable lessons in life.
 
-
-
-
- 
-
-
-\todo[inline]{I will list all of them, indeed. They are important to me. }
 
 % My family provide constant support.
 % My friends keep my grip on reality.
@@ -1106,7 +1117,7 @@ Rothstein-Morris E., Castellanos J.H., Ochoa M. and Chattopadhyay S. (2021). Imp
 %The acknowledgments and the people to thank go here, don't forget to include your project advisor\ldots
 
 
-Thank you Maria Fernanda García, dear Mafe, for always checking on me! Your messages always bring joy and a smile to my face, and they keep me motivated. I'm very grateful to be your friend :) 
+
 
 \end{acknowledgements}
 
