Closed acks for now. I'll add more thank yous later

--- a/main.tex
+++ b/main.tex
@@ -1085,13 +1085,12 @@ I want to especially thank Jorge Cuellar. Jorge, your passion for teaching and r
 
 I am fortunate to have friends all over the world! My friends in Singapore have been my family during these five years. Caro, John, Juancho, Andr\'es, I I hope you know that you'll find a friend in me, one you can always count on. Muchas gracias por todo!
 
-Carlos and Laura Murguia. I hope to 
-
+%There are many Carlos and Laura Murguia.
 Thank you Maria Fernanda García, dear Mafe, for always checking on me! Your messages always bring joy and a smile to my face, and they keep me motivated. I'm very grateful to be your friend :) 
 
-Finally, I would like to thank my thesis committee for the taking the time to read and evaluate the results of my work. The academic reviewing process is, unfortunately, often unappreciated. I you to know that I am truly grateful for your comments and suggestions.
+Finally, I would like to thank my thesis committee for the taking the time to read and evaluate the results of my work. The academic reviewing process is, unfortunately, often unappreciated. I want you to know that I am truly grateful for your comments and suggestions.
 
-It makes me happy to know that I've been surrounded by wonderful peers, friends, and family all this time. What a lovely, lovely, feeling it is, truly. 
+It makes me happy to know that I've been surrounded by wonderful peers, friends, and family all this time. What a delightful feeling it is, truly. 
 \begin{flushright}
 	Thank you all.\\
 	Eric G. Rothstein-Morris
