Problems with VScode. Committing for safety

--- a/main.tex
+++ b/main.tex
@@ -1044,12 +1044,15 @@ I hereby confirm the following:
 
 \begin{abstract}
 \addchaptertocentry{\abstractname} % Add the abstract to the table of contents
-\emph{Latent behaviour analysis} (LBA) is a method to study changes in the observable behaviour of a transition system when in the presence of an external force, e.g., an attack or a fault. In LBA, we model these external forces using spatial transformations, while preserving the original transition dynamics of the system. We use the framework of universal coalgebra to model the transition system as an $F$-coalgebra $(X,c\colon X\rightarrow F(X))$ for some functor $F$, and the external force as a spatial transformation $m\colon X\rightarrow X$, which lets us seamlessly combine the two into the latent $F$-coalgebra $(X,c\circ m)$. The latent $F$-coalgebra $(X,c\circ m)$ implements the transition system in the presence of the force modelled by $m$. %By changing the spatial transformation $m$, we obtain a family of 
+In this thesis, we propose \emph{Latent behaviour analysis} (LBA): a method to study changes in the observable behaviour of a transition system when in the presence of an external force, e.g., an attack or a fault. In LBA, we model these external forces using spatial transformations, while preserving the original transition dynamics of the system. We use the framework of universal coalgebra to model the transition system as an $F$-coalgebra $(X,c\colon X\rightarrow F(X))$ for some functor $F$, and the external force as a spatial transformation $m\colon X\rightarrow X$, which lets us seamlessly combine the two into what we call the latent $F$-coalgebra $(X,c\circ m)$. The latent $F$-coalgebra $(X,c\circ m)$ implements the transition system in the presence of the force modelled by $m$. %By changing the spatial transformation $m$, we obtain a family of 
 Latent coalgebras are compatible with the usual verification and testing methods for coalgebras and transition systems, and the properties satisfied by latent coalgebras prove properties about properties about the original system: if the latent coalgebra $(X,c\circ m)$ satisfies some property $P$, then the original system $(X,c)$ satisfies $P$ in the presence of the force modelled by $m$.
+
+Since the set of endofunctions form a monoid, we can combine spatial transformations to consider interesting interactions e.g. counterattacks. 
+\todo[inline]{}
 
 %More precisely, LBA proposes to model the transition system as an $F$-coalgebra $(X,c)$ and the external force as an endofunction $m\colon X\rightarrow X$; we then study the effects that $m$ has on $(X,c)$ by checking the latent $F$-coalgebra $(X,c\circ m)$. 
 
-Although using spatial transformations to reveal latent coalgebras is a simple idea, it has a variety of practical applications. In this thesis, we show how to use LBA to approach three cybersecurity problems. The first problem is the \emph{classification of attacker models}; we provide a method to systematically generate and compare attacker models for a system based on their potentially harmful effects by modelling their attacks using spatial transformations. The second problem is the \emph{quantification of robustness in Cyber-physical Systems (CPSs)}; we propose a methodology for the systematic generation of attacks in CPSs to quantify the robustness of a system, and we propose a notion of latent robustness which considers the use of counterattacks (also modelled using spatial transformations). Finally, we study the problem of \emph{timing side-channel repair}, for which we propose using a spatial transformation to enforce constant memory access patterns and preserves the functionality of the program. %For these three problems, LBA offers a 
+Using spatial transformations to create latent coalgebras has a variety of practical applications. In this thesis, we show how to use LBA to approach three cybersecurity problems. The first problem is the \emph{classification of attacker models}; we provide a method to systematically generate and compare attacker models for a system based on their potentially harmful effects by modelling their attacks using spatial transformations. The second problem is the \emph{quantification of robustness in Cyber-physical Systems (CPSs)}; we propose a methodology for the systematic generation of attacks in CPSs to quantify the robustness of a system, and we propose a notion of latent robustness which considers the use of counterattacks (also modelled using spatial transformations). Finally, we study the problem of \emph{timing side-channel repair}, for which we propose using a spatial transformation to enforce constant memory access patterns and preserves the functionality of the program. %For these three problems, LBA offers a 
 
 % The Thesis Abstract is written here (and usually kept to just this page). The page is kept centered vertically so can expand into the blank space above the title too\ldots
 
